# python-gnocchiclient

./: .coveragerc  .gitignore  .mailmap  .mergify.yml  .testr.conf  .travis.yml  README.rst  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: python-gnocchiclient.yml
doc/source/: conf.py  index.rst  shell.rst
gnocchiclient/: auth.py  benchmark.py  client.py  exceptions.py  gendoc.py  osc.py  shell.py  utils.py  version.py
gnocchiclient/tests/functional/: base.py  test_aggregates.py  test_archive_policy.py  test_archive_policy_rule.py  test_benchmark.py  test_capabilities.py  test_metric.py  test_osc.py  test_others.py  test_resource.py  test_resource_type.py  test_status.py
gnocchiclient/tests/unit/: test_auth.py  test_exceptions.py  test_utils.py
gnocchiclient/v1/: aggregates.py  aggregates_cli.py  archive_policy.py  archive_policy_cli.py  archive_policy_rule.py  archive_policy_rule_cli.py  build.py  build_cli.py  capabilities.py  capabilities_cli.py  client.py  metric.py  metric_cli.py  resource.py  resource_cli.py  resource_type.py  resource_type_cli.py  status_cli.py
tools/: install_deps.sh  travis-ci-setup.dockerfile
