[metadata]
name = gnocchiclient
summary = Python client library for Gnocchi
description_file =
    README.rst
author = Gnocchi
home_page = http://gnocchi.osci.io/gnocchiclient
python_requires = >=3.8
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.11

[options]
packages =
    gnocchiclient

install_requires =
    cliff>=2.10 # Apache-2.0
    ujson
    keystoneauth1>=2.0.0
    six
    futurist
    iso8601
    python-dateutil
    debtcollector

[options.extras_require]
test =
  python-openstackclient
  pytest
  pytest-xdist

doc =
  sphinx
  sphinx_rtd_theme

openstack =
  osc-lib>=0.3.0 # Apache-2.0

[options.entry_points]
console_scripts =
    gnocchi = gnocchiclient.shell:main

keystoneauth1.plugin =
    gnocchi-noauth = gnocchiclient.auth:GnocchiNoAuthLoader
    gnocchi-basic = gnocchiclient.auth:GnocchiBasicLoader

openstack.cli.extension =
    metric = gnocchiclient.osc

openstack.metric.v1 =
    # FIXME(sileht): don't duplicate entry with the one in shell.py
    metric_server_version = gnocchiclient.v1.build_cli:CliBuildShow
    metric_status = gnocchiclient.v1.status_cli:CliStatusShow
    metric_resource_list = gnocchiclient.v1.resource_cli:CliResourceList
    metric_resource_show = gnocchiclient.v1.resource_cli:CliResourceShow
    metric_resource_history = gnocchiclient.v1.resource_cli:CliResourceHistory
    metric_resource_search = gnocchiclient.v1.resource_cli:CliResourceSearch
    metric_resource_create = gnocchiclient.v1.resource_cli:CliResourceCreate
    metric_resource_update = gnocchiclient.v1.resource_cli:CliResourceUpdate
    metric_resource_delete = gnocchiclient.v1.resource_cli:CliResourceDelete
    metric_resource_batch_delete = gnocchiclient.v1.resource_cli:CliResourceBatchDelete
    metric_resource-type_list = gnocchiclient.v1.resource_type_cli:CliResourceTypeList
    metric_resource-type_create = gnocchiclient.v1.resource_type_cli:CliResourceTypeCreate
    metric_resource-type_show = gnocchiclient.v1.resource_type_cli:CliResourceTypeShow
    metric_resource-type_update = gnocchiclient.v1.resource_type_cli:CliResourceTypeUpdate
    metric_resource-type_delete = gnocchiclient.v1.resource_type_cli:CliResourceTypeDelete
    metric_archive-policy_list = gnocchiclient.v1.archive_policy_cli:CliArchivePolicyList
    metric_archive-policy_show = gnocchiclient.v1.archive_policy_cli:CliArchivePolicyShow
    metric_archive-policy_create = gnocchiclient.v1.archive_policy_cli:CliArchivePolicyCreate
    metric_archive-policy_update = gnocchiclient.v1.archive_policy_cli:CliArchivePolicyUpdate
    metric_archive-policy_delete = gnocchiclient.v1.archive_policy_cli:CliArchivePolicyDelete
    metric_archive-policy-rule_list = gnocchiclient.v1.archive_policy_rule_cli:CliArchivePolicyRuleList
    metric_archive-policy-rule_show = gnocchiclient.v1.archive_policy_rule_cli:CliArchivePolicyRuleShow
    metric_archive-policy-rule_create = gnocchiclient.v1.archive_policy_rule_cli:CliArchivePolicyRuleCreate
    metric_archive-policy-rule_delete = gnocchiclient.v1.archive_policy_rule_cli:CliArchivePolicyRuleDelete
    metric_list = gnocchiclient.v1.metric_cli:CliMetricList
    metric_show = gnocchiclient.v1.metric_cli:CliMetricShow
    metric_create = gnocchiclient.v1.metric_cli:CliMetricCreate
    metric_delete = gnocchiclient.v1.metric_cli:CliMetricDelete
    metric_measures_show = gnocchiclient.v1.metric_cli:CliMeasuresShow
    metric_measures_add = gnocchiclient.v1.metric_cli:CliMeasuresAdd
    metric_measures_batch-metrics = gnocchiclient.v1.metric_cli:CliMetricsMeasuresBatch
    metric_measures_batch-resources-metrics = gnocchiclient.v1.metric_cli:CliResourcesMetricsMeasuresBatch
    metric_measures aggregation = gnocchiclient.v1.metric_cli:CliMeasuresAggregation
    metric_aggregates = gnocchiclient.v1.aggregates_cli:CliAggregates
    metric_capabilities list = gnocchiclient.v1.capabilities_cli:CliCapabilitiesList
    metric_benchmark metric create = gnocchiclient.benchmark:CliBenchmarkMetricCreate
    metric_benchmark metric show = gnocchiclient.benchmark:CliBenchmarkMetricShow
    metric_benchmark measures add = gnocchiclient.benchmark:CliBenchmarkMeasuresAdd
    metric_benchmark measures show = gnocchiclient.benchmark:CliBenchmarkMeasuresShow

[wheel]
universal = 1
